class User:
    def __init__ (self, name:str):
        self.name = name
    def Comprobar_user (usuario:dict, name:str): 
        if name ==  User:
            print ("Bienvenido, ya es usuario de este teatro")
        else: 
            print ("Aún no es usuario de este teatro")





